@@ -93,4 +93,5 @@ readline.have_func("remove_history")
 readline.have_func("clear_history")
 readline.have_func("rl_redisplay")
 readline.have_func("rl_insert_text")
+readline.have_func("rl_delete_text")
 create_makefile("readline")
